# instantly-to-s3

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  worker.py
docs/plans/: 2026-04-17-instantly-to-s3-implementation.md  2026-04-20-leads-to-s3.md
docs/superpowers/specs/: 2026-04-14-instantly-to-s3-design.md  2026-04-20-leads-to-s3-design.md
src/: config.py  temporal_client.py
src/activities/: instantly.py  report.py  s3.py
src/api/: main.py
src/api/routes/: workflows.py
src/models/: campaign.py
src/workflows/: campaign_sync.py
tests/: test_schedule.py
tests/activities/: test_instantly.py  test_instantly_leads.py  test_report.py  test_s3.py
tests/api/: test_routes.py
tests/models/: test_campaign.py
tests/workflows/: test_campaign_sync.py
