[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instantly-to-s3"
version = "0.1.0"
description = "Weekly sync of Instantly campaign analytics to S3 as markdown reports."
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "moto[s3]>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
